package app;

public class Item {
    /* The purpose of this class is simply to hold all of the information required
    for each item of the to do list.  */
    public Item(String name, String due, String description){
        // Initialize each piece with user-provided information.
    }
    public String getItem(){
        // Simple getter.
        return "";
    }
    public String getDue(){
        // Simple getter.
        return "";
    }
    public String getDescription(){
        // Simple getter.
        return "";
    }
    public void setName(){
        // simple setter.
    }
    public void setDue(){
        // simple setter.
    }
    public void setDescription(){
        // simple setter.
    }
}
