@startuml
'https://plantuml.com/sequence-diagram
class ToDoListApplication{
    start(Stage)
    main(String[])
}

class ToDoListApplicationController{
    +initialize()
}
ToDoListApplication --o ToDoListApplicationController

class FileIO{
    +filePrep(ItemsList):String
    +saveFile():boolean
    +loadList()
}

ToDoListApplicationController --o FileIO

class Items{
    +Items(String, String, String)
    -due
    -description
    -completed
    +setDue(String)
    +setDescription(String)
    +getDue():String
    +getDescription():String
    +getCompleted():String
}

ToDoListApplicationController --o Items

class ParseTyping{
    +validateDescription(String):boolean
}

ToDoListApplicationController --o ParseTyping

class ItemsList{
    +ItemsList()
    +addItem(Items)
    +removeItem(int)
    +deleteList()
    +getItem(int):Items
    +setItem(int, Item)
    +getSize():int
    +isListEmpty():boolean
    +getList():ObservableList<Items>
}

ToDoListApplicationController --o ItemsList

@enduml